--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,8 @@ lerna-debug.log*
 *.sublime-workspace
 
 # IDE - VSCode
-.vscode/*
+.vscode
+.yarn
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
@@ -54,3 +55,5 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+package-lock.json
